# browsegrab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml  server.json
browsegrab/: __init__.py  __main__.py  config.py  mcp_server.py  result.py  session.py
browsegrab/agent/: __init__.py  cache.py  history.py  loop_guard.py
browsegrab/browser/: __init__.py  actions.py  manager.py  selectors.py  snapshot.py
browsegrab/dom/: __init__.py  compress.py  ref_map.py
browsegrab/llm/: __init__.py  base.py  parse.py  prompt.py  provider.py
tests/: test_actions.py  test_cache.py  test_config.py  test_e2e.py  test_history.py  test_loop_guard.py  test_parse.py  test_prompt.py  test_provider.py  test_ref_map.py  test_result.py  test_selectors.py  test_session.py  test_snapshot.py
